// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-14 {
  min-height: 100vh;
}

.emotion-4 {
  background-color: white;
  height: 100vh;
  min-width: 320px;
  width: 320px;
  overflow-y: scroll;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  border-right: 1px solid #e6e6eb;
}

.emotion-7 {
  position: fixed;
  z-index: 999999;
}

@media screen and (max-width:767px) {
  .emotion-7 {
    display: none;
  }
}

.emotion-13 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

@media screen and (max-width:767px) {
  .emotion-13 {
    padding-left: 0px;
  }
}

.emotion-16 {
  color: #574feb !important;
}

<div
  class="emotion-14 emotion-0 emotion-16 test fp-Box fp-PageWithSidebar"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-8 emotion-0 emotion-1 fp-Box fp-DisclosureContent"
    id="test"
  >
    <div
      class="emotion-0 emotion-1 emotion-7 fp-PageWithSidebarSidebarExpandedWrapper fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-4 fp-PageWithSidebarSidebar fp-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-0 emotion-1 emotion-13 fp-PageWithSidebarContent fp-Box"
  >
    hello world
  </div>
</div>
`;

exports[`overrides css.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  background-color: white;
  height: 100vh;
  min-width: 320px;
  width: 320px;
  overflow-y: scroll;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  border-right: 1px solid #e6e6eb;
}

.emotion-7 {
  position: fixed;
  z-index: 999999;
}

@media screen and (max-width:767px) {
  .emotion-7 {
    display: none;
  }
}

.emotion-13 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

@media screen and (max-width:767px) {
  .emotion-13 {
    padding-left: 0px;
  }
}

.emotion-14 {
  min-height: 100vh;
}

.emotion-14 {
  background-color: red;
}

<div
  class="emotion-14 emotion-0 emotion-1 fp-Box fp-PageWithSidebar"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-8 emotion-0 emotion-1 fp-Box fp-DisclosureContent"
    id="test"
  >
    <div
      class="emotion-0 emotion-1 emotion-7 fp-PageWithSidebarSidebarExpandedWrapper fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-4 fp-PageWithSidebarSidebar fp-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-0 emotion-1 emotion-13 fp-PageWithSidebarContent fp-Box"
  >
    hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-14 {
  min-height: 100vh;
}

.emotion-4 {
  background-color: white;
  height: 100vh;
  min-width: 320px;
  width: 320px;
  overflow-y: scroll;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  border-right: 1px solid #e6e6eb;
}

.emotion-7 {
  position: fixed;
  z-index: 999999;
}

@media screen and (max-width:767px) {
  .emotion-7 {
    display: none;
  }
}

.emotion-13 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

@media screen and (max-width:767px) {
  .emotion-13 {
    padding-left: 0px;
  }
}

<div
  class="emotion-14 emotion-0 emotion-1 fp-Box fp-PageWithSidebar"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-8 emotion-0 emotion-1 fp-Box fp-DisclosureContent"
    id="test"
  >
    <div
      class="emotion-0 emotion-1 emotion-7 fp-PageWithSidebarSidebarExpandedWrapper fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-4 fp-PageWithSidebarSidebar fp-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-0 emotion-1 emotion-13 fp-PageWithSidebarContent fp-Box"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-14 {
  min-height: 100vh;
}

.emotion-4 {
  background-color: white;
  height: 100vh;
  min-width: 320px;
  width: 320px;
  overflow-y: scroll;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  border-right: 1px solid #e6e6eb;
}

.emotion-7 {
  position: fixed;
  z-index: 999999;
}

@media screen and (max-width:767px) {
  .emotion-7 {
    display: none;
  }
}

.emotion-13 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

@media screen and (max-width:767px) {
  .emotion-13 {
    padding-left: 0px;
  }
}

.emotion-16 {
  color: #574feb !important;
}

<div
  class="emotion-14 emotion-0 emotion-16 fp-Box fp-PageWithSidebar"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-8 emotion-0 emotion-1 fp-Box fp-DisclosureContent"
    id="test"
  >
    <div
      class="emotion-0 emotion-1 emotion-7 fp-PageWithSidebarSidebarExpandedWrapper fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-4 fp-PageWithSidebarSidebar fp-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-0 emotion-1 emotion-13 fp-PageWithSidebarContent fp-Box"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with sidebarPlacement 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-14 {
  min-height: 100vh;
}

.emotion-4 {
  background-color: white;
  height: 100vh;
  min-width: 320px;
  width: 320px;
  overflow-y: scroll;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  border-left: 1px solid #e6e6eb;
}

.emotion-7 {
  position: fixed;
  z-index: 999999;
  right: 0;
}

@media screen and (max-width:767px) {
  .emotion-7 {
    display: none;
  }
}

.emotion-13 {
  width: 100%;
  padding-right: 320px;
  padding-right: 0px;
}

@media screen and (max-width:767px) {
  .emotion-13 {
    padding-right: 0px;
  }
}

<div
  class="emotion-14 emotion-0 emotion-1 fp-Box fp-PageWithSidebar"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-8 emotion-0 emotion-1 fp-Box fp-DisclosureContent"
    id="test"
  >
    <div
      class="emotion-0 emotion-1 emotion-7 fp-PageWithSidebarSidebarExpandedWrapper fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-4 fp-PageWithSidebarSidebar fp-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-0 emotion-1 emotion-13 fp-PageWithSidebarContent fp-Box"
  >
    Hello world
  </div>
</div>
`;

exports[`theming css.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  background-color: white;
  height: 100vh;
  min-width: 320px;
  width: 320px;
  overflow-y: scroll;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  border-right: 1px solid #e6e6eb;
}

.emotion-7 {
  position: fixed;
  z-index: 999999;
}

@media screen and (max-width:767px) {
  .emotion-7 {
    display: none;
  }
}

.emotion-13 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

@media screen and (max-width:767px) {
  .emotion-13 {
    padding-left: 0px;
  }
}

.emotion-14 {
  min-height: 100vh;
}

.emotion-14 {
  background-color: red;
}

<div
  class="emotion-14 emotion-0 emotion-1 fp-Box fp-PageWithSidebar"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-8 emotion-0 emotion-1 fp-Box fp-DisclosureContent"
    id="test"
  >
    <div
      class="emotion-0 emotion-1 emotion-7 fp-PageWithSidebarSidebarExpandedWrapper fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-4 fp-PageWithSidebarSidebar fp-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-0 emotion-1 emotion-13 fp-PageWithSidebarContent fp-Box"
  >
    hello world
  </div>
</div>
`;

exports[`variants css.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  background-color: white;
  height: 100vh;
  min-width: 320px;
  width: 320px;
  overflow-y: scroll;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  border-right: 1px solid #e6e6eb;
}

.emotion-7 {
  position: fixed;
  z-index: 999999;
}

@media screen and (max-width:767px) {
  .emotion-7 {
    display: none;
  }
}

.emotion-13 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

@media screen and (max-width:767px) {
  .emotion-13 {
    padding-left: 0px;
  }
}

.emotion-14 {
  min-height: 100vh;
}

.emotion-14 {
  background-color: red;
}

<div
  class="emotion-14 emotion-0 emotion-1 fp-Box fp-PageWithSidebar"
>
  <div
    class="emotion-0 emotion-1 fp-Box"
  />
  <div
    class="emotion-8 emotion-0 emotion-1 fp-Box fp-DisclosureContent"
    id="test"
  >
    <div
      class="emotion-0 emotion-1 emotion-7 fp-PageWithSidebarSidebarExpandedWrapper fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-4 fp-PageWithSidebarSidebar fp-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-0 emotion-1 emotion-13 fp-PageWithSidebarContent fp-Box"
  >
    hello world
  </div>
</div>
`;
